# astro-elvis

./: Dockerfile  pyproject.toml
.astro/: config.yaml
.astrocloud/: config.yaml  test_dag_integrity_default.py
dags/: collect-raw-data.py  raw-to-ndjson.py
tests/dags/: test_dag_integrity.py
